# LMSnew

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
lms/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/fixtures/: fixtures.json
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_coursepayment.py  0005_coursepayment_course.py
users/: models.py  permissions.py  tasks.py  urls.py  views.py
users/management/commands/: add_payments.py  csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_managers.py
